<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_inicio"
    tools:context=".iniciarSesion">


    <EditText
        android:id="@+id/et_correo"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/Correo"
        android:inputType="textEmailAddress"
        android:paddingTop="15dp"
        android:textColor="#FC11380A"
        android:textColorHint="#03521B"
        android:textSize="25sp"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logoinicio"
        tools:ignore="MissingConstraints" />


    <EditText
        android:id="@+id/et_pass"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="15"
        android:hint="@string/Contraseña"
        android:inputType="textPassword"
        android:paddingTop="15dp"
        android:textColor="#FC11380A"
        android:textColorHint="#03521B"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/et_correo"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/et_correo"
        app:layout_constraintTop_toBottomOf="@+id/et_correo"
        app:passwordToggleEnabled="true"
        tools:ignore="MissingConstraints" />


    <Button
        android:id="@+id/btnIniciarSesion"
        android:layout_width="200dp"
        android:layout_height="36dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/boton_estilo"
        android:onClick="IniciarSesion"
        android:text="@string/iniciar_sesion"
        android:textColor="#012B02"
        android:textColorLink="#00BCD4"
        android:textSize="19dp"
        app:layout_constraintEnd_toEndOf="@+id/et_pass"
        app:layout_constraintStart_toStartOf="@+id/et_pass"
        app:layout_constraintTop_toBottomOf="@+id/et_pass"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnContacto"
        android:layout_width="200dp"
        android:layout_height="36dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/boton_estilo"
        android:onClick="irContacto"
        android:text="@string/contacto"
        android:textColor="#012B02"
        android:textSize="17dp"
        app:layout_constraintEnd_toEndOf="@+id/btnIniciarSesion"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnIniciarSesion"
        app:layout_constraintTop_toBottomOf="@+id/btnIniciarSesion"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/iv_logoinicio"
        android:layout_width="227dp"
        android:layout_height="233dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/logo_estilo"
        android:padding="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/start" />


</androidx.constraintlayout.widget.ConstraintLayout>